--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.5",
     "axios": "^1.6.8",
     "next": "14.2.3",
     "react": "^18",
